<resources>
    <string name="app_name">IMC</string>
    <string name="inserir_altura">Insira sua altura </string>
    <string name="inserir_peso">Insira seu peso </string>
    <string name="unidade_kg">Kg</string>
    <string name="unidade_metros">m</string>
    <string name="calcular_imc">Calcular IMC</string>
    <string name="resultado_imc">Seu IMC é: </string>
    <string name="resultado_situacao">Peso Normal</string>

    <string name="muito_abaixo_peso">Muito abaixo do peso</string>
    <string name="abaixo_peso">Abaixo do peso</string>
    <string name="peso_normal">Peso normal</string>
    <string name="acima_do_peso">Acima do peso</string>
    <string name="obesidade_1">Obesidade I</string>
    <string name="obesidade_2">Obesidade II</string>
    <string name="obesidade_3">Obesidade III</string>
</resources>
