<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dev.mendes.android_imc.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/scale" />

        <TextView
            android:id="@+id/txt_peso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/inserir_peso"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/lnl_peso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edt_peso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="73"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/txt_unidade_kg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unidade_kg"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/txt_altura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/inserir_altura"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/lnl_altura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edt_altura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="1,76"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/txt_unidade_m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unidade_metros"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        android:text="@string/calcular_imc"
        android:textColor="#fff" />

</RelativeLayout>